<resources>
    <string name="app_name">MenuMemo</string>
    <string name="clear">CLEAR</string>
    <string name="all_clear">ALL CLEAR</string>
    <string name="table">TABLE</string>
    <string name="edit_menu">edit menu</string>
    <string name="reset_menu">reset menu</string>
    <string name="export_menu">export menu</string>
    <string name="import_menu">import menu</string>
    <string name="save">save</string>
    <string name="delete">delete</string>
    <string name="menu">menu</string>
    <string name="category">category</string>
    <string name="emptyMsg">menu and category cannot be empty</string>
    <string name="settings">Settings</string>
    <string name="failed_toast">failed (check duplicate name)</string>
    <string name="saved_toast">saved</string>
    <string name="deleted_toast">deleted</string>
    <string name="spinner_default">select category (all)</string>
    <string name="selectedMsg">is selected</string>
    <string name="initMes">Data has been initialized</string>
    <string name="initDialogTitle">Data Initialization</string>
    <string name="initDialogMsg">Do you want to delete all data from table?</string>
    <string name="yes">yes</string>
    <string name="no">no</string>
    <string name="deleteCategoryDialogTitle">Delete category</string>
    <string name="deleteCategoryDialogMsg">This action will delete all menu from category</string>
    <string name="deleteCategoryDialogToast">has been deleted</string>
    <string name="edit_category">Edit Category</string>
    <string name="cancel">cancel</string>
    <string name="admob_app_id" translatable="false">ca-app-pub-1136089143214600~2160892547</string>
    <string name="banner_ad_unit_id" translatable="false">ca-app-pub-1136089143214600/9847810875</string>
    <string name="banner_ad_unit_id_for_test" translatable="false">ca-app-pub-3940256099942544/6300978111</string>
    <string name="message_quit">Do you want to quit?</string>
    <string name="tableDialogTitle">Please enter a table number</string>
    <string name="confirm">confirm</string>
    <string name="tableNo_duplicate">This table number already exists</string>
</resources>
