<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/white"
    android:orientation="vertical"
    tools:context=".DetailActivity">

    <TextView
        android:id="@+id/tv_tableNo_detail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="TableNo"
        android:textColor="@android:color/black"
        android:textSize="25sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/et_menu_detail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="test 1 2345"
        android:textColor="@android:color/black"
        android:textSize="15sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_save_detail"
            android:layout_width="80dp"
            android:layout_height="match_parent"
            android:text="@string/save" />

        <Button
            android:id="@+id/btn_delete_detail"
            android:layout_width="80dp"
            android:layout_height="match_parent"
            android:text="@string/delete" />

        <Button
            android:id="@+id/btn_cancel_detail"
            android:layout_width="80dp"
            android:layout_height="match_parent"
            android:text="@string/cancel" />

    </LinearLayout>

</LinearLayout>