<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:gravity="center"
        android:textColor="#ffffff"
        android:textSize="16dp"
        android:textAllCaps="true"
        android:text="@string/edit_category"
        android:background="@color/colorAccent"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#000000"/>

    <EditText
        android:id="@+id/categoryEdt"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:gravity="center"
        android:textColor="#000000"
        android:textSize="16dp"
        android:hint="test"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#000000"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/cancelBtn_editCategory"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/cancel"
            android:textColor="#000000"
            android:textSize="16dp"
            android:background="#ffffff"/>
        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="#000000" />


        <Button
            android:id="@+id/deleteBtn_editCategory"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/delete"
            android:textColor="#000000"
            android:textSize="16dp"
            android:background="#ffffff"/>
        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="#000000" />

        <Button
            android:id="@+id/saveBtn_editCategory"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/save"
            android:textColor="#000000"
            android:textSize="16dp"
            android:background="#ffffff"/>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#000000"/>
</LinearLayout>