<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:ads="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/background_light"
    android:orientation="vertical"
    android:weightSum="10"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@android:color/background_light"
        android:baselineAligned="false"
        android:orientation="horizontal"
        android:layout_weight="0.1"
        android:weightSum="10">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1.5"
            android:gravity="left">

            <ImageButton
                android:id="@+id/backBtn_settings"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="@android:color/background_light"
                android:paddingLeft="10dp"
                android:src="@drawable/ic_arrow_back" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="7"
            android:background="@android:color/background_light"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/settings"
                android:textAllCaps="true"
                android:textSize="25sp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1.5"
            android:background="@android:color/background_light"
            android:gravity="right">

            <ImageButton
                android:id="@+id/homeBtn_settings"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="@android:color/background_light"
                android:paddingRight="10dp"
                android:src="@drawable/ic_home" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:layout_weight="9.9"
        android:orientation="vertical">

        <Button
            android:id="@+id/editMenuBtn_settings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="20dp"
            android:text="@string/edit_menu"
            android:textSize="20sp" />

        <Button
            android:id="@+id/resetMenu_settings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="20dp"
            android:text="@string/reset_menu"
            android:textSize="20sp" />

    </LinearLayout>

    <com.google.android.gms.ads.AdView
        android:id="@+id/adView_settings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        ads:adSize="BANNER"
        ads:adUnitId="@string/banner_ad_unit_id_for_test"></com.google.android.gms.ads.AdView>


</LinearLayout>
