<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@color/colorPrimary"
        android:baselineAligned="false"
        android:orientation="horizontal"
        android:weightSum="10">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1.5"
            android:gravity="left">

            <ImageButton
                android:id="@+id/backBtn_editMenu"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="@color/colorPrimary"
                android:paddingLeft="10dp"
                android:src="@drawable/ic_arrow_back" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="7"
            android:background="@color/colorPrimary"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/edit_menu"
                android:textAllCaps="true"
                android:textSize="25sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1.5"
            android:background="@color/colorPrimary"
            android:gravity="right">

            <ImageButton
                android:id="@+id/homeBtn_editMenu"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="@color/colorPrimary"
                android:paddingRight="10dp"
                android:src="@drawable/ic_home" />
        </LinearLayout>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/background_dark"></View>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="100">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="35"
            android:orientation="horizontal"
            android:weightSum="100">

            <LinearLayout
                android:layout_width="10dp"
                android:layout_height="match_parent"
                android:layout_weight="70"
                android:orientation="vertical"
                android:weightSum="100">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_margin="10dp"
                    android:layout_weight="50"
                    android:gravity="center">

                    <EditText
                        android:id="@+id/edtMenu_editMenu"
                        android:layout_width="200dp"
                        android:layout_height="45dp"
                        android:hint="@string/menu"
                        android:inputType="text"
                        android:maxLength="20"></EditText>

                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@android:color/background_dark"></View>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_margin="10dp"
                    android:layout_weight="50"
                    android:gravity="center">

                    <EditText
                        android:id="@+id/edtCategory_editMenu"
                        android:layout_width="200dp"
                        android:layout_height="45dp"
                        android:hint="@string/category"
                        android:inputType="text"
                        android:maxLength="20"></EditText>

                </LinearLayout>

            </LinearLayout>

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@android:color/background_dark"></View>

            <LinearLayout
                android:layout_width="10dp"
                android:layout_height="match_parent"
                android:layout_weight="30"
                android:gravity="center"
                android:orientation="vertical">

                <Button
                    android:id="@+id/saveBtn_editMenu"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:background="@color/colorPrimaryDark"
                    android:text="@string/save"
                    android:layout_margin="5dp"
                    android:textColor="@color/white"
                    android:textSize="16sp"></Button>

                <Button
                    android:id="@+id/deleteBtn_editMenu"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:background="@color/colorPrimaryDark"
                    android:textColor="@color/white"
                    android:text="@string/delete"
                    android:textSize="16sp"></Button>

                <Button
                    android:id="@+id/clearBtn_editMenu"
                    android:layout_width="100dp"
                    android:layout_margin="5dp"
                    android:layout_height="wrap_content"
                    android:background="@color/colorPrimaryDark"
                    android:textColor="@color/white"
                    android:text="@string/clear"
                    android:textSize="16sp"></Button>

            </LinearLayout>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/background_dark"></View>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="65"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_margin="10dp"
                android:orientation="horizontal"
                android:weightSum="100">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_weight="10">


                    <Spinner
                        android:id="@+id/spinner_editMenu"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:clickable="true"
                        android:longClickable="true"
                        android:prompt="@string/category" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_weight="90">

                    <ImageButton
                        android:id="@+id/refresh_editMenu"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                      android:background="@drawable/button_background"
                        android:src="@drawable/ic_refresh_black_24dp" />

                </LinearLayout>


            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray"></View>


            <ListView
                android:id="@+id/list_editMenu"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

        </LinearLayout>

        <com.google.android.gms.ads.AdView xmlns:ads="http://schemas.android.com/apk/res-auto"
            android:id="@+id/adView_editMenu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center"
            ads:adSize="BANNER"
            ads:adUnitId="@string/banner_ad_unit_id"></com.google.android.gms.ads.AdView>


    </LinearLayout>

</LinearLayout>