<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:orientation="vertical"
    android:weightSum="10"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:background="@color/colorPrimary"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:orientation="horizontal"
            android:weightSum="10">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1.5"
                android:background="@color/colorPrimary"
                android:gravity="center">

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="7"
                android:background="@color/colorPrimary"
                android:gravity="center">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Menu Memo"
                    android:textSize="25sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1.5"
                android:background="@color/colorPrimary"
                android:gravity="right">

                <ImageButton
                    android:id="@+id/settingBtn_main"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/colorPrimary"
                    android:src="@drawable/ic_settings" />
            </LinearLayout>

        </LinearLayout>

        <ScrollView
            android:id="@+id/scrollView_main"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorPrimary">

            <TableLayout
                android:id="@+id/memoTb"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:stretchColumns="*">

            </TableLayout>

        </ScrollView>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/colorPrimary"
        android:gravity="center">


        <Button
            android:id="@+id/subtractionBtn_main"
            android:layout_width="50dp"
            android:layout_height="35dp"
            android:layout_margin="5dp"
            android:background="@drawable/button_background"
            android:text="-"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/plusBtn_main"
            android:layout_width="50dp"
            android:layout_height="35dp"
            android:layout_margin="5dp"
            android:background="@drawable/button_background"
            android:text="+"
            android:textColor="@color/white" />


        <Button
            android:id="@+id/clearBtn_main"
            android:layout_width="100dp"
            android:layout_height="35dp"
            android:layout_margin="5dp"
            android:background="@drawable/button_background"
            android:text="@string/all_clear"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/tableBtn_main"
            android:layout_width="100dp"
            android:layout_height="35dp"
            android:layout_margin="5dp"
            android:background="@drawable/button_background"
            android:text="@string/table"
            android:textColor="@color/white" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="6"
        android:background="@color/colorPrimary"
        android:gravity="center"
        android:orientation="vertical">

        <Spinner
            android:id="@+id/spinner_main"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"></Spinner>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/buttonsTb_main"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="5dp">

            </LinearLayout>

        </ScrollView>


    </LinearLayout>

    <com.google.android.gms.ads.AdView xmlns:ads="http://schemas.android.com/apk/res-auto"
        android:id="@+id/adView_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:background="@color/colorPrimary"
        ads:adSize="BANNER"
        ads:adUnitId="@string/banner_ad_unit_id"></com.google.android.gms.ads.AdView>

</LinearLayout>